add > styling empty star

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ fruit of your choice; strawberries are excellent.
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>
+<span id="empty-star" class="fa fa-star"></span>
         <p>All rights reserved © 2025.</p>
     </div>
 </footer>
